@@ -166,6 +166,39 @@ private:
 
   int*           m_arr;
   //ndarray<int,2> m_arr2d;
+
+
+//--------------------
+  /**
+   * @brief Gets m_numQuadsInConfig, m_roiMask[q] and m_numAsicsStored[q] from the Psana::CsPad::ConfigV# object.
+   * 
+   */
+
+template <typename T>
+bool getQuadConfigParsForType(Env& env)
+{
+  shared_ptr<T> config = env.configStore().get(m_src);
+  if (config.get()) {
+      for (uint32_t q = 0; q < 4; ++ q) {
+        m_roiMask[q]         = config->roiMask(q);
+        m_numAsicsStored[q]  = config->numAsicsStored(q);
+      }
+
+      m_nquads         = config->numQuads();               // this may be less than 4
+      m_n2x1           = Psana::CsPad::SectorsPerQuad;     // v_image_shape[0]; // 8
+      m_ncols2x1       = Psana::CsPad::ColumnsPerASIC;     // v_image_shape[1]; // 185
+      m_nrows2x1       = Psana::CsPad::MaxRowsPerASIC * 2; // v_image_shape[2]; // 388
+      m_sizeOf2x1Arr   = m_nrows2x1      * m_ncols2x1;                          // 185*388;
+      m_sizeOfQuadArr  = m_sizeOf2x1Arr  * m_n2x1;                              // 185*388*8;
+      m_sizeOfCSPadArr = m_sizeOfQuadArr * 4;                                   // 185*388*8*4;
+
+      return true; 
+  }
+  return false;
+}
+
+//--------------------
+
 };
 
 } // namespace ImgPixSpectra
