@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2013-10-24 Mikhail S. Dubrovin
+Tag: V00-01-02
+- CSPadPixSpectra extend CSPAD configuration up to V5
+
 Tag: V00-01-01
 2013-09-17 Andy Salnikov
 - documentation generation changed in SConsTools, updating SConscript
